# SDC-midterm

./: CMakeLists.txt  README.md  package.xml
config/: localiztion.rviz  map_modified.rviz  visualization.rviz
launch/: localiztion.launch  localiztion_2.launch  map_modified.launch  visualization.launch
result/: result1-2.csv  result1-3.csv  result1.csv  result1_KF-2.csv  result1_KF-3.csv  result1_KF-4.csv  result1_KF-intens100.csv  result1_KF-intens95-2.csv  result1_KF-intens95.csv  result1_lpf_angle_gain_0.3.csv  result1_lpf_gain0.87.csv  result1_lpf_gain0.88.csv  result1_lpf_gain0.9-2.csv  result1_lpf_gain0.9.csv  result1_lpf_gain0.9_intens95.csv  result1_lpf_gain_0.8.csv  result1_maxdist50.csv  result1_test.csv  result2.csv  result2_KF-1.csv  result2_KF-2.csv  result2_KF-3.csv  result2_reset.csv
src/: localization.cpp  map_modified.cpp  map_pub.cpp  radar.cpp  visualization.cpp
